# vkma

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py
app/core/clients/: __init__.py
app/core/clients/aitunnel/: __init__.py  client.py  test.py
app/core/clients/vk_api/: __init__.py  auth.py  client.py  vk_api.py
app/core/logger/: __init__.py  logger_config.py
app/database/: crud.py  db_helper.py  models.py
app/dependencies/: __init__.py  dependencies.py
app/modules/analyzer/: __init__.py  messages.json  models.py  router.py  service.py  utils.py
app/modules/chat_bot/: handlers.py  keyboards.py  router.py  utils.py
app/modules/generator/: costs.py  models.py  router.py  service.py
