[project]
name = "vk-mini-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.44.0",
]
