[project]
name = "vk-mini-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.0",
    "greenlet>=3.4.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.32.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
